# vms

./: .gitignore  README.md  README_AWS.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  migrate.py  pyproject.toml  start.sh  update_db_v2.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  employees.py  security.py  visitors.py
backend/app/core/: database.py  db.py  security.py
backend/app/db/: models.py
backend/app/models/: appointment.py  user.py  visitor.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: axios.js
frontend/src/components/: AppointmentList.jsx  AppointmentModal.jsx  CalendarSync.jsx  InteractiveCalendar.jsx  ManageUsers.jsx  Reports.jsx  SecurityConsole.jsx  StaffManager.jsx  VisitorsTable.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Login.jsx  ResetPassword.jsx  Signup.jsx
